# miktos-desktop

./: .gitignore  CONTRIBUTING.md  Dockerfile.production  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AICommandBar.tsx  LiveContextPanel.tsx  Sidebar.tsx  StatusBar.tsx  WorkflowCanvas.tsx
